--- a/styles.css
+++ b/styles.css
@@ -6,80 +6,321 @@
     margin: 0;
     padding: 0;
 }
+:root{
+    font-size: 62.5%;
+}
+button{
+    border: none;
+    outline: none;
+    background: none;
+    padding: 0;
+    margin: 0;
+}
+html{
+    font-family: "Manrope", sans-serif;
+}
+.sr-only{
+    position: absolute;
+    top: auto;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px, 1px, 1px, 1px);
+    white-space: nowrap; 
+}
 body{
-    background-color:hsl(230, 100%, 99%) ;
-    font-family: 'Manrope', sans-serif;
+    min-height: 100vh;
+    padding:8.9rem 2.4rem 8.6rem ;
+    display: grid;
+    place-items: start center;
+    background: hsl(230, 100%, 99%);
+    background: url(./images/bg-pattern.svg) no-repeat, #f9faff;
+    background-size: auto 50%;
 }
-main{
-    border: 1px solid red;
-    max-width: 80%;
-    margin: 0 auto;
-    text-align: center;
-    background-image: url(./images/bg-pattern.svg);
-    background-repeat: no-repeat;
-    background-position: -0% -100%;
-}
-section{
-    border: 1px solid red;
-    max-width: 400px;
-    margin: 0 auto;
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-}
-h1{
-    font-weight: 800;
-    color: hsl(227, 35%, 25%);
-    line-height: 1.5;
-    margin-bottom: 1rem;
-}
-section p{
-    max-width:200px;
-    margin: 0 auto;
-    font-size: 15px;
-    color: hsl(225, 20%, 60%);
-    line-height: 1.5;
-}
-.component{
-    background-color: hsl(0, 0%, 100%);
-    max-width: 400px;
-    margin: 0 auto;
-    box-shadow: 1px 2px 4px rgba(142, 137, 137, 0.5);
-    margin-bottom: 5rem;
-    padding-top:2rem ;
-}
-.number{
-    padding-bottom: 2rem;
-    font-weight: 500;
-    color: hsl(225, 20%, 60%);
-    text-transform: uppercase;
-    letter-spacing: 1px;
-}
-.slidecontainer{
+.card-wrapper{
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    gap: 6.4rem;
     width: 100%;
 }
-.slider{
-    width: 80%;
+.pricing-card-header{
+    display: flex;
+    flex-flow:column nowrap;
+    align-items: center;
+    gap: 0.8rem;
+    position: relative;
+}
+.pricing-card-header::before{
+    position: absolute;
+    content: "";
+    background: url(./images/pattern-circles.svg) no-repeat center;
+    width: 100%;
+    height: 100%;
+    transform: translate(0, 33%);
+    z-index: -1;
+}
+.pricing-card-header h2{
+    font-weight: 800;
+    font-size: 2rem; 
+    line-height: 2.7rem;
+    text-align: center;
+    color: #293356;
+}
+.pricing-card-header p{
+    font-weight: 600;
+    font-size: 1.3rem;
+    line-height: 2.1rem;
+    text-align: center;
+    color:#838ead;
+    max-width: 17rem;
+}
+form.pricing-card{
+    background: white;
+    width: 100%;
+    max-width: 54rem;
+    display: grid;
+    box-shadow: 0px 20px 30px -5px rgba(127, 177, 185, 0.352);
+    padding: 0.8rem;
+    padding: 3.4rem 0;
+    gap: 3.4rem;
+    justify-items: center;
+}
+.pricing-card_views{
+    font-weight: 800;
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+    text-align: center;
+    letter-spacing: 0.17rem;
+    text-transform: uppercase;
+    color: #848ead;
+}
+.pricing-card_views-range{
+    margin: 0.7rem 0 0.6rem;
+    max-width: 85%; 
+}
+input[type="range"]{
     appearance: none;
-    height: 10px;
-    border-radius: 20px;
-    background-color: hsl(224, 65%, 95%);
+    width: 100%;
+    background: transparent;
+}
+input[type="range"]::-webkit-slider-thumb{
+    appearance: none;
+}
+input[type="range"]::-moz-range-thumb{
+    outline: none;
+    border: none;
+}
+input[type="range"]:focus{
     outline: none;
 }
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    position: relative;
-    appearance: none;
-    width: 23px;
-    height: 24px;
-    border: 0;
-    background: url(./images/icon-slider.svg);
-    border-radius: 50%;
-  }
-  .slider::-moz-range-thumb {
-    width: 23px;
-    height: 25px;
-    border: 0;
+form.pricing-card{
+    --thumb-dimensions:4rem;
+    --thumb-br:50%;
+    --thumb-bg:#10dbc4;
+    --thumb-hover-bg:#7aeadf;
+    --thumb-active-bg:#24aea1;
+    --thumb-bs:0px 15px 30px rgba(0 , 255, 231, 0.6);
+    --track-h:0.8rem;
+    --track-bg:#ecf0fb;
+    --track-br:0.5rem;
+    --left:50;
+}
+input[type="range"]::-webkit-slider-thumb{
+    margin-top: -1.4rem;
+    height: var(--thumb-dimensions);
+    width: var(--thumb-dimensions);
+    border-radius: var(--thumb-br);
+    background: url(./images/icon-slider.svg) center no-repeat,var(--thumb-bg);
     cursor: pointer;
-    background-color: hsl(174, 86%, 45%);
+    box-shadow: var(--thumb-bs);
+    transition:250ms;
+}
+input[type="range"]:hover::-webkit-slider-thumb{
+    background-color: var(--thumb-hover-bg);
+}
+input[type="range"]:active:-webkit-slider-thumb{
+    background-color: var(--thumb-active-bg);
+}
+input[type="range"]::-webkit-slider-runnable-track{
+    width: 100%;
+    background-color: var(--track-bg);
+    height: var(--track-h);
+    border-radius: var(--track-br);
+    cursor: pointer;
+    background-image: linear-gradient(to right,#a4f3eb calc(var(--left) *1%),transparent 0%);
+}
+.pricing-card_price-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+.pricing-card_price{
+    font-weight: 800;
+    font-size: 3.2rem;
+    line-height: 0.4rem;
+    letter-spacing: 0.03rem;
+    color: #293356;
+}
+.pricing-card_billing-frequency{
+    font-weight: 600;
+    font-size: 1.4rem;
+    line-height: 1.9rem;
+    color:#b4bead
+}
+#billing-freq{
+    display: none;
+}
+.pricing-card_billing-frequency-toggle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.2rem;
+    cursor: pointer;
+    transform: translateX(-0.6rem);
+    margin-bottom: 0.4rem;
+}
+.toggle{
+    width: 4.4rem;
+    height: 2.2rem;
+    border-radius: 1.5rem;
+    padding: 0.4rem;
+    background: #cfdbef;
+    transition:250ms ease-in-out;
+}
+.toggle-circle{
+    display: block;
+    height: 1.4rem;
+    width: 1.4rem;
+    background: white;
+    border-radius: 50%;
+    transform: translateX(0);
+    transition: transform 250ms ease-in-out;
+}
+#billing-freq:checked ~ .toggle > .toggle-circle{
+    transform: translateX(2.2rem);
+}
+.pricing-card_billing-frequency-toggle:hover > .toggle,#billing-freq:checked~.toggle{
+    background: #7aeadf;
+}
+.pricing-card_freq-option{
+    font-weight: 600;
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+    color: #848ead;
+    position: relative;
+}
+.price-card_bottom{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 3.4rem;
+    flex-direction: column;
+    padding: 2.4rem 0 0;
+    border-top: 1px solid #ecf0fb;
+}
+.pricing-card_features{
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    gap: 1rem;
+}
+.pricing-card_feature{
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+    font-weight: 600;
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+    color: #848ead;
+}
+.pricing-card_submit-btn{
+    width: max-content;
+    padding: 1.2rem 4.6rem;
+    border-radius: 2rem;
+    cursor: pointer;
+    font-weight: 800;
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+    color: #becdff;
+    transition: color 250ms ease-in-out;
+    background: #293356;
+    letter-spacing: 0.1rem;
+}
+.pricing-card_submit-btn:hover{
+    color: white;
+}
 
-  }
+@media screen and (min-width: 375px){
+    .pricing-card_freq-option--annual::after{
+        content: "-25%";
+        position: absolute;
+        width: max-content;
+        left: 100%;
+        top: 50%;
+        transform: translate(0.55rem, -50%);
+        padding: 0.2rem 0.85rem 0.3rem 0.75rem;
+        background: #feede8;
+        font-weight: 800;
+        font-size: 1rem;
+        border-radius: 0.9rem;
+        color:#ff8d68;
+    }
+    
+    
+}
+@media screen and (min-width:620px){
+    .pricing-card-header p{
+        max-width: unset;
+    }
+    form.pricing-card{
+        grid-template-columns: 1fr 1fr;
+        grid-auto-rows: max-content;
+        padding: 4rem 0;
+        align-items: center;
+        gap: 4rem;
+    }
+    .pricing-card_views{
+        font-size: 1.4rem;
+        line-height: 1.9rem;
+        letter-spacing: 0.2rem;
+    }
+    .pricing-card_views-range{
+        margin: 0 0 1.6rem;
+        grid-row: 2/3;
+        grid-column: 1/3;
+        max-width: 82%;
+    }
+    .pricing-card_price-container{
+        justify-self: start;
+    }
+    .pricing-card_billing-frequency{
+        font-size: 1.6rem;
+        line-height: 2.2rem;
+    }
+    .pricing-card_billing-frequency-toggle{
+        grid-column: 1/3;
+        transform: translateX(0);
+        margin-bottom: 0;
+    }
+    .pricing-card_freq-option--annual::after{
+        content: "-25% discount";
+    }
+    .price-card_bottom{
+        grid-column: 1/3;
+        flex-flow: row nowrap;
+        padding: 3.2rem 4.4rem 0 4.8rem;
+        justify-content: space-between;
+    }
+    .pricing-card_features{
+        grid-column: 1/2;
+        align-items: flex-start;
+    }
+}
+@media screen and (min-width:1000px){
+    body{
+        background-size: cover;
+        padding-top: 10.4rem;
+    }
+}
